test: fix z-index issue

--- a/src/components/dls/EmbeddableContent/EmbeddableContent.module.scss
+++ b/src/components/dls/EmbeddableContent/EmbeddableContent.module.scss
@@ -49,7 +49,7 @@
 }
 
 .overlay {
-  z-index: 999999999999999999999; // TODO: this is dirty hack, need to find a better way to do this
+  z-index: 9999999999;
   background: var(--color-background-backdrop);
   position: fixed;
   inset: 0;
